--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main class="main-content">
         <header class="header-banner">
-            <h1 class="main-title">Amigo Secreto</h1>
+            <h1 class="main-title">Bem vindo ao Sorteador de Amigo Secreto></h1>
             <img src="assets/amigo-secreto.png" alt="Imagem representativa de amigo secreto">
         </header>
 
